--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Cute Font', cursive;
+    font-family: 'Fredoka One', cursive;
 
 }
 
@@ -29,4 +29,28 @@ h1 {
     text-transform: uppercase;
     text-align: center;
     margin-bottom: 16px;
+}
+
+.search-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 16px;
+    overflow: hidden;
+    width: 100%;
+    max-width: 480px;
+    margin-bottom: 16px;
+    transition: 0.4s;
+}
+
+.search-box input {
+    display: block;
+    appearance: none;
+    outline: none;
+    border: none;
+
+    padding: 16px;
+    width: 100%;
+    transition: 0.4s;
+
 }
