--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 }
 
 .App {
-    background-color: #FFF4D6;
+    background-color: #FBF8EE;
 }
 
 header {
@@ -30,6 +30,7 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 100px;
 }
 
 h1 {
@@ -98,7 +99,7 @@ h1 {
     text-decoration: none;
     outline: none;
     color: #8F5B4A;
-    background-color: #FFF4D6;
+    background-color: #FBF8EE;
     border: none;
     border-radius: 10px;
     font-family: "Roboto Condensed", sans-serif;
@@ -124,19 +125,32 @@ h1 {
     clear: both;
   }
 
-.side {
+.sideleft {
     float: left;
-    width: 25%;
+    width: 20%;
     min-height: 100vh;
     padding: 10px;
+    background-color: #FFECBC;
+}
+
+.sideright {
+    float: left;
+    width: 18%;
+    min-height: 100vh;
+    background-color: #FBF8EE;
+
+    display: grid;
+    grid-template-rows: auto;
+    gap: 20px;
 }
 
 .middle {
     float: left;
-    width: 50%;
+    width: 60%;
     min-height: 100vh;
     padding: 10px;
-    background-color: #07f280;
+    background-color: #FBF8EE;
+    text-align: left;
 }
 
 form{
@@ -188,6 +202,13 @@ ul li span{
     text-align: ce;
 }
 
+.one-box {
+    display: grid;
+    border-style: solid;
+    gap: 20px;
+    background-color: white;
+  }
+
 .auth-form-container, .login-form {
   text-align: center;
   display: flex;
@@ -195,7 +216,7 @@ ul li span{
   min-height: 20vh;
   align-items: center;
   justify-content: center;
-  background-color: #FFF4D6;
+  background-color: #FBF8EE;
   padding: 0.5rem;
   margin: 0.1rem;
 }
@@ -239,4 +260,15 @@ button3 {
   border-radius: 10px;
   cursor: pointer;
   margin: 0.5rem;
+}
+
+#dancing {
+    width: 50px;
+    height: 50px;
+    margin-right: auto;
+}
+
+#panini {
+    width: 30%;
+    height: 30%;
 }
