--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;1,200&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -117,4 +119,24 @@ h1 {
 .results {
     max-width: 500px;
     white-space: pre-line;
+}
+
+.ideas-container {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  padding: 2em;
+}
+
+.idea-group {
+  width: 700px;
+  background-color: #FBF8EE;
+  border-radius: 15px;
+  padding: 1em;
+  display: flex;
+  flex-direction: column;
+}
+
+.idea-desc {
+  font-family: Arial, Helvetica, sans-serif;
 }
