--- a/src/App.css
+++ b/src/App.css
@@ -282,10 +282,10 @@ dashboard2body {
   text-align: center;
   display: flex;
   flex-direction: column;
-  min-height: 20vh;
+  min-height: 60vh;
   align-items: center;
   justify-content: center;
-  background-color: #FBF8EE;
+  background-color: white;
   padding: 0.5rem;
   margin: 0.1rem;
 }
@@ -324,11 +324,20 @@ button2 {
 
 button3 {
   border: none;
-  background-color: white;
-  padding: 10px;
+  background-color: red;
+  padding: 2px;
   border-radius: 10px;
   cursor: pointer;
-  margin: 0.5rem;
+  margin: 0.2rem;
+}
+
+button4 {
+  border: none;
+  background-color: red;
+  padding: 2px;
+  border-radius: 10px;
+  cursor: pointer;
+  margin: 0.1rem;
 }
 
 #dancing {
