--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@ header {
     justify-content: flex-end;
     align-items: center;
     padding: 10px 3%;
+    padding-left: 5px;
     background-color: #8F5B4A;
   }
   
@@ -38,13 +39,13 @@ header {
 h1 {
     color: #8F5B4A;
     font-size: 42px;
-    text-transform: uppercase;
     text-align: center;
     margin-bottom: 16px;
 }
 
 .search-box {
     display: flex;
+    gap: 10px;
     align-items: center;
     justify-content: center;
     border-radius: 16px;
@@ -56,12 +57,15 @@ h1 {
 }
 
 .search-box input {
+    font-family: sans-serif;
+    font-size: 14px;
+    color: #885D4D;
+    border-radius: 20px;
+    padding: 5px 10px;
     display: block;
     appearance: none;
     outline: none;
-    border: none;
-
-    padding: 16px;
+    border: solid 1px #885D4D;
     width: 100%;
     transition: 0.4s;
 }
@@ -94,17 +98,17 @@ h1 {
 
   .button {
     display: inline-block;
-    padding: 10px 20px;
+    padding: 10px 15px;
     font-size: 15px;
     cursor: pointer;
     text-align: center;
     text-decoration: none;
     outline: none;
-    color: #8F5B4A;
-    background-color: #FBF8EE;
+    color: #885D4D;
+    background-color: #FFECBC;
     border: none;
     border-radius: 10px;
-    font-family: "Roboto Condensed", sans-serif;
+    font-family: 'Fredoka One', cursive;
     font-weight: 1000;
   }
   
@@ -138,7 +142,6 @@ h1 {
 .sideright {
     float: left;
     width: 25%;
-    min-height: 100vh;
     background-color: #FBF8EE;
 
     display: grid;
@@ -149,17 +152,16 @@ h1 {
 .middle {
     float: left;
     width: 50%;
-    min-height: 100vh;
-    padding-left: 100px;
-    padding-right: 100px;
+    padding-left: 80px;
+    padding-right: 80px;
     padding-top: 40px;
     background-color: #FBF8EE;
     text-align: left;
 }
 
 form{
-    margin-top: 30px;
-    box-shadow: -3px 6px 4px #222;
+    margin-top: 10px;
+    border-radius: 20px;
 }
 
 form input {
@@ -167,18 +169,19 @@ form input {
     height: 40px;
     border: none;
     outline: none;
-    padding: 0 5px;
     color: rgb(14, 12, 12);
 }
 
-form button {
-    width: 50px;
-    height: 40px;
-    border: none;
-    background: #0088a9;
-    color: white;
-    outline: none;
-    cursor: pointer;
+.search-btn {
+  font-size: 14px;
+  width: 90px;
+  height: 40px;
+  border: none;
+  background-color: #FFFFFF;
+  border-radius: 20px;
+  outline: none;
+  cursor: pointer;
+  border: solid 1px #885D4D;
 }
 
 .list-container {
@@ -310,7 +313,6 @@ label
 
 input{
   margin: 0.5rem 0;
-  padding: 1rem;
   border: none;
   border-radius: 10px;
 }
@@ -352,26 +354,29 @@ button4 {
 }
 
 #dancing {
-    width: 10%;
-    height: 10%;
-    margin-right: auto;
+    width: 80px;
+    height: auto;
 }
 
 #panini {
+  position: relative;
     width: 30%;
     height: 30%;
+    animation: dance 1.5s linear infinite;
 }
 
 .ideas-container {
   display: flex;
   flex-direction: column;
-  width: 700px;
-  gap: 40px;
+  width: 800px;
+  gap: 30px;
   padding: 2em;
+  border-right: solid #885D4D;
 }
 
 .ideas-container h1 {
   text-align: left;
+  margin-bottom: 0;
 }
 
 .idea-group {
@@ -380,6 +385,7 @@ button4 {
   padding: 1em;
   display: flex;
   flex-direction: row;
+  box-shadow: 0px 3px 2px #888888;
 }
 
 .idea-name {
@@ -393,14 +399,13 @@ button4 {
 }
 
 #unique {
-    padding-right: 60%;
-    padding-bottom: 6%;
+    text-align: left;
+    padding-bottom: 16px;
 }
 
 #poopy {
-    padding-right: 39%;
+    text-align: left;
     padding-top: 10%;
-    height: 10px;
 }
 
 .button-group {
@@ -435,4 +440,33 @@ button4 {
 #loading {
   height: 300px;
   width: 300px;
+}
+
+.logo-group {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-right: auto;
+}
+
+#logo-text {
+  color: #FFECBC;
+  margin-left: -25px;
+  padding-bottom: 5px;
+  width: 80px;
+  text-align: center;
+}
+
+#main-title {
+  font-size: 64px;
+}
+
+@keyframes dance {
+  0%, 100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-50px);
+  }
+  
 }
