Added preferences pane

--- a/src/App.css
+++ b/src/App.css
@@ -8,10 +8,6 @@
     color:#8F5B4A;
 }
 
-a {
-  color: none;
-}
-
 .App {
     background-color: #FBF8EE;
 }
@@ -495,4 +491,53 @@ button2 {
     transform: translateY(-50px);
   }
   
+}
+
+.select-page {
+  display: flex;
+
+}
+
+.filter-section {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  padding: 2em;
+  flex: auto;
+}
+
+.filter-section h1 {
+  text-align: left;
+  margin-bottom: 0;
+}
+
+.filter-container {
+  border-radius: 10px;
+  border: solid 1px #885D4D;
+  background: #ffffff;
+  padding: 15px 30px;
+  width: 100%;
+}
+
+.filter-search-box {
+  display: flex;
+  flex-direction: column;
+}
+
+.difficulty-selection {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.difficulty-btn {
+  border-radius: 5px;
+  background: #FFECBC;
+  border: none;
+  padding: 8px 12px;
+  min-width: 100px;
+  box-shadow: 1px 2px 2px #222;
+}
+
+.selected {
+  background: #FFDA7B;
 }
